@@ -1,5 +1,7 @@
 2009-11-26  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/generic/powm.c: Make comments reflect current code state.
+
 	* tests/devel/try.c: Make mpn_mullow_n testing actually work.
 
 2009-11-25  Torbjorn Granlund  <tege@gmplib.org>
